--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
     font-display: swap;
   }
   
-  @font-face {
+@font-face {
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 700;
@@ -14,26 +14,24 @@
     font-display: swap;
   }
   
-  body {
+body {
     font-family: "PT Sans", sans-serif;
     font-size: 20px;
     line-height: 26px;
     background-color: #E5E5E5;
+    width: 1280px;
+    height: 3315px;
     color: #333333;
   } 
 
-  .navigation-link {
+.navigation-link {
     font-weight: 700;
     text-align: left;
     color: #000000;
     text-decoration: none; 
   }
 
-  .navigation-search-link {
-    text-decoration: none;
-  }
-
-  .button {
+.button {
     font-family: inherit;
     text-transform: uppercase;
     text-decoration: none;
@@ -41,45 +39,174 @@
     font-weight: 700;
   }
   
-  .button-basic {
+.button-basic {
     background-color: #756257;
     color: #FFFFFF; 
   }
 
-  .button-additional {
+.button-additional {
     background-color: #83B3D3;
     color: #FFFFFF;  
   }
   
-  .button-selected {
+.button-selected {
     background-color: #7DB54F;
     color: #FFFFFF;
   }
 
-  .button-ranking {
+.button-ranking {
     background-color: #F2F2F2;
     font-weight: 400;
   }
 
-  .button-pagination-current {
+.button-pagination-current {
     background-color: #F2F2F2;
     color: #000000;  
   }
 
-  .page-header {
+.search-button {
+    line-height: 36px;
+  }
+
+.page-header {
     color: #000000;
     background-color: #FFFFFF;
+    width: 1200px;
   }
 
-  .main-index {
+.main-index {
     background-color: #FFFFFF;
-    background-position: 40px;
+    width: 1200px;
   }
 
-  .welcome {
+.welcome {
   color: #000000;
   background-image: url("../images/welcome/welcome_background.jpg");
   width: 1200px;
   height: 485px;
   background-repeat: no-repeat;
+  background-color: rgba(131, 179, 211, 0.12);
   }
+
+.description {
+    text-align: center;
+  }
+
+.description-title {
+    color: #000000;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    text-transform: uppercase;
+  }
+
+.description-advantages {
+    font-size: 22px;
+    line-height: 36px;
+  }
+
+.advantages-items {
+    width: 400px;
+    height: 384px;
+    background-color: rgba(131, 179, 211, 0.12);
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+  }
+
+.advantages-title {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 700;
+    color: #000000;
+    text-transform: uppercase;
+       
+  }
+
+.advantages-town .advantages-title {
+    color: #FFFFFF;
+  }
+
+.advantages-town {
+    background-color: #83B3D3;
+    color: #FFFFFF;
+  }
+  
+.advantages-bridge .advantages-title {
+    color: #FFFFFF;
+  }
+
+.advantages-bridge {
+    background-color: #83B3D3;
+    color: #FFFFFF;
+  }
+
+.advantages-road {
+    background-color: rgba(131, 179, 211, 0.2);
+  }
+
+.advantages-nested-eating {
+    background-color: #FFFFFF;
+  }
+
+.search {
+    text-align: center;
+  }
+
+.search-title {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    text-transform: uppercase;
+    color: #000000;
+  }
+
+.search-basic {
+    font-size: 22px;
+  }
+
+.newsletter {
+  background-image: url("../images/newsletter_background.jpg");
+  background-color: #83B3D3;
+  width: 1200px;
+  height: 411px;
+  color: #FFFFFF;
+  font-size: 22px;
+  text-align: center;
+}
+  
+.page-footer-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.newsletter-button {
+  font-size: 20px;
+}
+
+.field {
+  font-size: 18px;
+}
+
+.page-footer {
+  background-color: #FFFFFF;
+  width: 1200px;
+}
+.footer-social-link {
+  color: inherit;
+}
+
+ .footer-contacts-phone {
+  font-style: normal;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000000;
+}
+  
+
+
+  
