--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,9 +99,10 @@ body {
 
 .welcome {
   color: #000000;
-  background-image: url("../images/welcome/welcome_background.jpg");
+  background-image: url("../images/welcome/welcome_divider.svg"), url("../images/welcome/welcome_background.jpg");
   width: 1200px;
   height: 485px;
+  background-position: bottom, 0 0;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
 }
