--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,14 +82,71 @@ body {
   color: #000000;
 }
 
-.search-button {
+.button-search {
   line-height: 36px;
+}
+
+.button-newsletter {
+  font-size: 20px;
+}
+
+.button-apply {
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.button-reset {
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 400;
+  text-transform: none;
+  background-color: transparent;
+  color: #FFFFFF;
+}
+
+.button-view {
+  color: #000000;
+  background-color: #FFFFFF;
+}
+
+.button-ranking {
+  font-size: 16px;
+  line-height: 21px;
+  width: 160px;
+  height: 37px;
+}
+
+.button-hotels-amount {
+  font-size: 18px;
+  line-height: 23px;
 }
 
 .page-header {
   color: #000000;
   background-color: #FFFFFF;
   width: 1200px;
+}
+
+.navigation {
+  display: flex;
+  width: 1060px;
+  margin: 0 auto;
+}
+
+.navigation-list {
+  width: 520px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.navigation-search {
+  max-width: 310px;
+  margin-left: auto;
+}
+
+.page-header-logo {
+  margin-right: 30px;
 }
 
 .main-index {
@@ -107,6 +164,11 @@ body {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
+.welcome-image {
+  display: block;
+  margin: 0 auto;
+}
+
 .description {
   text-align: center;
 }
@@ -117,11 +179,30 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  width: 720px;
+  margin: 0 auto;
+  margin-bottom: 25px;
+  padding-top: 60px;
 }
 
 .description-advantages {
   font-size: 22px;
   line-height: 36px;
+}
+
+.advantages-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.advantages-nested-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
 }
 
 .advantages-items {
@@ -133,13 +214,31 @@ body {
   text-align: center;
 }
 
+.advantages-description {
+  width: 250px;
+  margin: 0 auto;
+}
+
+.advantages-town .advantages-description {
+  width: 220px;
+}
+
+.advantages-bridge .advantages-description {
+  width: 220px;
+}
+
+.advantages-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .advantages-title {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
-
+  margin: 0;
 }
 
 .advantages-town .advantages-title {
@@ -202,10 +301,6 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-}
-
-.newsletter-button {
-  font-size: 20px;
 }
 
 .field {
@@ -283,20 +378,6 @@ body {
   text-align: right;
 }
 
-.button-apply {
-  font-size: 16px;
-  line-height: 21px;
-}
-
-.button-reset {
-  font-size: 18px;
-  line-height: 23px;
-  font-weight: 400;
-  text-transform: none;
-  background-color: transparent;
-  color: #FFFFFF;
-}
-
 .catalog-result-title {
   font-weight: 700;
   font-size: 30px;
@@ -308,11 +389,6 @@ body {
 .select-control {
   font-size: 18px;
   line-height: 23px;
-  background-color: #FFFFFF;
-}
-
-.button-view {
-  color: #000000;
   background-color: #FFFFFF;
 }
 
@@ -329,23 +405,38 @@ body {
   line-height: 23px;
 }
 
-.button-ranking {
-  font-size: 16px;
-  line-height: 21px;
-  width: 160px;
-  height: 37px;
-}
-
 .hotels-amount {
-  font-size: 18px;
-  line-height: 23px;
-}
-
-.button-hotels-amount {
   font-size: 18px;
   line-height: 23px;
 }
 
 .footer-title-inner {
   color: #000000;
+}
+
+.footer-container {
+  display: flex;
+  width: 1056px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.footer-social {
+  width: 140px;
+  margin-right: auto;
+}
+
+.footer-phone {
+  width: 720px;
+}
+
+.htmlacademy-link {
+  width: 120px;
+  margin-left: auto;
+}
+
+.footer-social-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
