Убирает height в разделах welcome и "Преимущества"

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,6 @@ body {
   font-size: 16px;
   line-height: 21px;
   width: 160px;
-  height: 37px;
 }
 
 .button-hotels-amount {
@@ -158,7 +157,6 @@ body {
   color: #000000;
   background-image: url("../images/welcome/welcome_divider.svg"), url("../images/welcome/welcome_background.jpg");
   width: 1200px;
-  height: 485px;
   background-position: bottom, 0 0;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
@@ -167,6 +165,8 @@ body {
 .welcome-image {
   display: block;
   margin: 0 auto;
+  padding-top: 51px;
+  padding-bottom: 82px;
 }
 
 .description {
@@ -181,13 +181,14 @@ body {
   text-transform: uppercase;
   width: 720px;
   margin: 0 auto;
-  margin-bottom: 25px;
-  padding-top: 60px;
+  margin-bottom: 31px;
+  padding-top: 63px;
 }
 
 .description-advantages {
   font-size: 22px;
   line-height: 36px;
+  padding-bottom: 80px;
 }
 
 .advantages-list {
@@ -206,8 +207,9 @@ body {
 }
 
 .advantages-items {
-  width: 400px;
-  height: 384px;
+  width: 250px;
+  margin: 0 auto;
+  padding: 98px 75px 108px;
   background-color: rgba(131, 179, 211, 0.12);
   font-size: 18px;
   line-height: 21px;
@@ -215,15 +217,26 @@ body {
 }
 
 .advantages-description {
-  width: 250px;
   margin: 0 auto;
 }
 
-.advantages-town .advantages-description {
-  width: 220px;
+.advantages-nested .advantages-description {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
-.advantages-bridge .advantages-description {
+.advantages-description-number {
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.advantages-nested {
+  padding-top: 184px;
+  padding-bottom: 79px;
+}
+
+
+.advantages-town .advantages-description {
   width: 220px;
 }
 
@@ -233,21 +246,31 @@ body {
 }
 
 .advantages-title {
+  width: 180px;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 auto;
+  margin-bottom: 29px;
+
+}
+
+.advantages-nested .advantages-title {
+  margin-bottom: 20px;
 }
 
 .advantages-town .advantages-title {
   color: #FFFFFF;
+  margin-bottom: 30px;
 }
 
 .advantages-town {
   background-color: #83B3D3;
   color: #FFFFFF;
+  width: 220px;
+  padding: 97px 90px 87px;
 }
 
 .advantages-bridge .advantages-title {
@@ -257,6 +280,8 @@ body {
 .advantages-bridge {
   background-color: #83B3D3;
   color: #FFFFFF;
+  width: 220px;
+  padding: 98px 90px 87px;
 }
 
 .advantages-road {
