--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,12 @@ body {
 
 .button-search {
   line-height: 36px;
+  display: block;
+  box-sizing: border-box;
+  width: 575px;
+  margin: 0 auto;
+  padding: 15px;
+
 }
 
 .button-newsletter {
@@ -128,6 +134,7 @@ body {
 
 .navigation {
   display: flex;
+  flex-wrap: wrap;
   width: 1060px;
   margin: 0 auto;
 }
@@ -171,6 +178,9 @@ body {
 
 .description {
   text-align: center;
+  width: 720px;
+  margin: 0 auto;
+  margin-bottom: 80px;
 }
 
 .description-title {
@@ -179,7 +189,6 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  width: 720px;
   margin: 0 auto;
   margin-bottom: 31px;
   padding-top: 63px;
@@ -188,7 +197,6 @@ body {
 .description-advantages {
   font-size: 22px;
   line-height: 36px;
-  padding-bottom: 80px;
 }
 
 .advantages-list {
@@ -204,6 +212,7 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .advantages-items {
@@ -294,6 +303,9 @@ body {
 
 .search {
   text-align: center;
+  width: 720px;
+  margin: 0 auto;
+  margin-bottom: 93px;
 }
 
 .search-title {
@@ -302,14 +314,19 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
+  padding-top: 91px;
+  margin-bottom: 29px;
 }
 
 .search-basic {
   font-size: 22px;
+  margin: 0;
+  margin-bottom: 56px;
 }
 
 .newsletter {
-  width: 1200px;
+
   height: 411px;
   font-size: 22px;
   text-align: center;
@@ -383,6 +400,7 @@ body {
 
 .catalog-filter {
   display: flex;
+  flex-wrap: wrap;
   width: 1057px;
   margin: 0 auto;
 }
@@ -453,6 +471,7 @@ body {
 
 .footer-container {
   display: flex;
+  flex-wrap: wrap;
   width: 1056px;
   margin: 0 auto;
   justify-content: center;
