--- a/styles/styles.css
+++ b/styles/styles.css
@@ -326,23 +326,33 @@ body {
 }
 
 .newsletter {
-
-  height: 411px;
+  width: 800px;
+  margin: 0 auto;
+  padding: 94px 200px;
   font-size: 22px;
   text-align: center;
 }
 
 .newsletter-index {
   background-image: url("../images/newsletter_background.jpg");
+  background-repeat: no-repeat;
   background-color: #83B3D3;
   color: #FFFFFF;
 }
 
 .page-footer-title {
+  margin: 0;
+  margin-bottom: 29px;
+
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+}
+
+.newsletter-description {
+  margin: 0;
+  margin-bottom: 46px;
 }
 
 .field {
@@ -403,6 +413,12 @@ body {
   flex-wrap: wrap;
   width: 1057px;
   margin: 0 auto;
+}
+
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 .catalog-filter-group legend {
