--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,17 @@ body {
   color: #333333;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   margin: 0 auto;
   width: 1200px;
@@ -40,13 +51,6 @@ body {
 
 .main-container {
   flex-grow: 1;
-}
-
-.navigation-link {
-  font-weight: 700;
-  text-align: left;
-  color: #000000;
-  text-decoration: none;
 }
 
 .button {
@@ -140,10 +144,30 @@ body {
 }
 
 .navigation-list {
+  display: flex;
+  flex-wrap: wrap;
   width: 520px;
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+.navigation-link {
+  display: block;
+  padding: 20px 17px;
+  font-weight: 700;
+  text-align: left;
+  color: #000000;
+  text-decoration: none;
+}
+
+.navigation-search .navigation-link {
+  min-width: 18px;
+  min-height: 18px;
+}
+
+.navigation-link.button-basic {
+  color: #FFFFFF;
 }
 
 .navigation-search {
@@ -167,12 +191,12 @@ body {
   background-position: bottom, 0 0;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
+  padding-top: 51px;
 }
 
 .welcome-image {
   display: block;
   margin: 0 auto;
-  padding-top: 51px;
   padding-bottom: 82px;
 }
 
@@ -181,6 +205,7 @@ body {
   width: 720px;
   margin: 0 auto;
   margin-bottom: 80px;
+  padding-top: 63px;
 }
 
 .description-title {
@@ -191,7 +216,6 @@ body {
   text-transform: uppercase;
   margin: 0 auto;
   margin-bottom: 31px;
-  padding-top: 63px;
 }
 
 .description-advantages {
@@ -306,6 +330,7 @@ body {
   width: 720px;
   margin: 0 auto;
   margin-bottom: 93px;
+  padding-top: 91px;
 }
 
 .search-title {
@@ -315,7 +340,6 @@ body {
   text-transform: uppercase;
   color: #000000;
   margin: 0;
-  padding-top: 91px;
   margin-bottom: 29px;
 }
 
@@ -323,6 +347,16 @@ body {
   font-size: 22px;
   margin: 0;
   margin-bottom: 56px;
+}
+
+.page-footer {
+  background-color: #FFFFFF;
+
+}
+
+.footer-container {
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 .newsletter {
@@ -360,11 +394,6 @@ body {
   background-color: #F2F2F2;
 }
 
-.page-footer {
-  background-color: #FFFFFF;
-  width: 1200px;
-}
-
 .footer-social-link {
   color: inherit;
 }
@@ -376,6 +405,42 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  text-decoration: none;
+}
+
+.footer-title-inner {
+  color: #000000;
+}
+
+.footer-contacts-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1056px;
+  margin: 0 auto;
+  padding-top: 40px;
+  justify-content: center;
+}
+
+.footer-social {
+  width: 140px;
+  margin-right: auto;
+}
+
+.footer-phone {
+  width: 720px;
+}
+
+.htmlacademy-link {
+  width: 120px;
+  margin-left: auto;
+}
+
+.footer-social-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .main-inner {
@@ -481,34 +546,3 @@ body {
   line-height: 23px;
 }
 
-.footer-title-inner {
-  color: #000000;
-}
-
-.footer-container {
-  display: flex;
-  flex-wrap: wrap;
-  width: 1056px;
-  margin: 0 auto;
-  justify-content: center;
-}
-
-.footer-social {
-  width: 140px;
-  margin-right: auto;
-}
-
-.footer-phone {
-  width: 720px;
-}
-
-.htmlacademy-link {
-  width: 120px;
-  margin-left: auto;
-}
-
-.footer-social-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
