--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
+  border-radius: 4px;
 }
 
 .button-basic {
@@ -107,6 +108,8 @@ body {
 
 .button-apply {
   margin-bottom: 6px;
+  box-sizing: border-box;
+  width: 160px;
 }
 
 .filter-buttons .button {
@@ -192,6 +195,12 @@ body {
   text-decoration: none;
 }
 
+.navigation-link-current {
+  text-decoration-line: underline;
+  text-underline-offset: 23px;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #756257;
+}
 .navigation-search .navigation-link {
   min-width: 18px;
   min-height: 18px;
@@ -764,7 +773,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #83B3D3;
 }
 
 .pagination-item:not(:last-child) {
