--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,7 @@ body {
 }
 
 .button-additional {
-  background-color: #83B3D3;
+  background-color: #82B3D3;
   color: #FFFFFF;
 }
 
@@ -215,7 +215,8 @@ body {
 .navigation-link.button-basic {
   color: #FFFFFF;
   min-width: 130px;
-  padding: 9px 15px 8px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .navigation-search {
@@ -274,10 +275,9 @@ body {
 
 .description {
   text-align: center;
-  width: 720px;
+  width: 660px;
   margin: 0 auto;
-  margin-bottom: 90px;
-  padding-top: 63px;
+  padding: 63px 270px 90px;
 }
 
 .description-title {
@@ -292,7 +292,9 @@ body {
 
 .description-advantages {
   font-size: 22px;
-  line-height: 36px;
+  line-height: 26px;
+  margin: 0 auto;
+
 }
 
 .advantages-list {
@@ -328,6 +330,15 @@ body {
 .advantages-description-number {
   margin: 0 auto;
   margin-bottom: 30px;
+  color: #000000;
+}
+
+.advantages-bridge .advantages-description-number {
+  color: #FFFFFF;
+}
+
+.advantages-town .advantages-description-number {
+  color: #FFFFFF;
 }
 
 .advantages-nested {
@@ -358,9 +369,8 @@ body {
 }
 
 .advantages-town {
-  background-color: #83B3D3;
+  background-color: #82B3D3;
   color: #FFFFFF;
-
   padding: 92px 85px;
 }
 
@@ -369,9 +379,8 @@ body {
 }
 
 .advantages-bridge {
-  background-color: #83B3D3;
+  background-color: #82B3D3;
   color: #FFFFFF;
-
   padding: 92px 85px;
 }
 
@@ -444,7 +453,7 @@ body {
 .newsletter-index {
   background-image: url("../images/newsletter_background.jpg");
   background-repeat: no-repeat;
-  background-color: #83B3D3;
+  background-color: #82B3D3;
   color: #FFFFFF;
 }
 
@@ -558,7 +567,7 @@ body {
 .catalog-hotels {
   background-image: url("../images/filter_background.jpg");
   background-repeat: no-repeat;
-  background-color: #83B3D3;
+  background-color: #82B3D3;
   width: 1057px;
   margin: 0 auto;
   padding: 35px 72px 83px 71px;
